--- a/10codes-overlay.html
+++ b/10codes-overlay.html
@@ -20,7 +20,7 @@
         /* Main container that holds all the code lists. It's fixed to the top-left of the viewport. */
         .overlay-container {
             position: fixed;
-            top: 10px;
+            top: 130px; /* Increased top margin to add space above */
             left: 10px; /* Positioned on the left */
             display: flex;
             flex-direction: column;
@@ -132,3 +132,4 @@
 
 </body>
 </html>
+
