--- a/10codes-overlay.html
+++ b/10codes-overlay.html
@@ -51,6 +51,13 @@
             margin-right: 8px;
         }
 
+        /* Styling for the Miranda rights text block */
+        .miranda-rights {
+            margin-top: 15px; /* Adds space above the text block */
+            line-height: 1.6; /* Increases spacing between lines for readability */
+            max-width: 450px; /* Constrains width to align with the columns above */
+        }
+
     </style>
 </head>
 <body>
@@ -127,7 +134,14 @@
             <div class="code-item"><span class="code">Code Blue</span>Disengage</div>
             <div class="code-item"><span class="code">Signal 100</span>Hold Radio</div>
         </div>
-
+        
+        <div class="miranda-rights">
+            You have the right to remain silent.<br>
+            Anything you say or do can be used against you in a court of law.<br>
+            You have the right to an attorney, if you can not afford an attorney, one will be appointed to you by the state if available.<br>
+            Do you understand the rights I just read to you?<br>
+            After being read these rights do you still wish to speak to me?
+        </div>
     </div>
 
 </body>
