--- a/10codes-overlay.html
+++ b/10codes-overlay.html
@@ -20,7 +20,7 @@
         /* Main container that holds all the code lists. It's fixed to the top-left of the viewport. */
         .overlay-container {
             position: fixed;
-            top: 130px; /* Increased top margin to add space above */
+            top: 50px; /* Reduced top margin to bring it closer to the top */
             left: 10px; /* Positioned on the left */
             display: flex;
             flex-direction: column;
@@ -138,7 +138,8 @@
         <div class="miranda-rights">
             You have the right to remain silent.<br>
             Anything you say or do can be used against you in a court of law.<br>
-            You have the right to an attorney, if you can not afford an attorney, one will be appointed to you by the state if available.<br>
+            You have the right to an attorney, if you can not afford an attorney, <br>
+            one will be appointed to you by the state if available.<br>
             Do you understand the rights I just read to you?<br>
             After being read these rights do you still wish to speak to me?
         </div>
