--- a/10-codes.html
+++ b/10-codes.html
@@ -148,13 +148,20 @@
                     <span class="font-semibold text-lg flex-grow text-left">10 Codes Quiz</span>
                 </a>
                 
-                <!-- 10 Codes Overlay -->
+                <!-- 10 Codes Overlay: Basic -->
                 <a href="10codes-overlay-general" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.2s;">
                     <svg class="w-6 h-6 mr-4 text-orange-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
                         <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
                     </svg>
-                    <span class="font-semibold text-lg flex-grow text-left">10 Codes Overlay</span>
+                    <span class="font-semibold text-lg flex-grow text-left">10 Codes Overlay | Basic</span>
                 </a>
+                <!-- 10 Codes Overlay: Advanced -->
+                <a href="10codes-overlay-advanced" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.2s;">
+                    <svg class="w-6 h-6 mr-4 text-yellow-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M9.879 7.519c1.171-1.025 3.071-1.025 4.242 0 1.172 1.025 1.172 2.687 0 3.712-.203.179-.43.326-.67.442-.745.361-1.45.999-1.45 1.827v.75M21 12a9 9 0 11-18 0 9 9 0 0118 0zm-9 5.25h.008v.008H12v-.008z" />
+                </svg>
+                    <span class="font-semibold text-lg flex-grow text-left">10 Codes Overlay | Collapsible </span>
+</a>
             </main>
         </div>
         
