--- a/10codes-overlay-advanced.html
+++ b/10codes-overlay-advanced.html
@@ -48,16 +48,10 @@
         .overlay-container::-webkit-scrollbar-thumb:hover {
             background: rgba(255,255,255,0.6);
         }
-
-        .codes-column {
-            display: flex;
-            flex-direction: column;
-            gap: 20px;
-        }
-
-        /* Styling for the list of codes, now using a two-column layout */
+        
+        /* Styling for the list of codes, now using a three-column layout */
         .codes-list {
-            column-count: 2; /* Arrange codes into 2 columns */
+            column-count: 3; /* Arrange codes into 3 columns */
             column-gap: 30px; /* Space between columns */
         }
 
@@ -155,45 +149,72 @@
         <details>
             <summary>10 Codes</summary>
             <div class="collapsible-content">
-                <div class="codes-column">
-                    <!-- Top two columns of 10-Codes -->
-                    <div class="codes-list">
-                        <div class="code-item essential"><span class="code">10-4</span>Ack</div>
-                        <div class="code-item"><span class="code">10-6</span>Busy</div>
-                        <div class="code-item"><span class="code">10-29</span>Check Wanted</div>
-                        <div class="code-item"><span class="code">10-26</span>Detaining</div>
-                        <div class="code-item"><span class="code">10-22</span>Disregard</div>
-                        <div class="code-item"><span class="code">10-27</span>DL Info</div>
-                        <div class="code-item"><span class="code">10-17</span>Drugs/Guns Susp.</div>
-                        <div class="code-item essential"><span class="code">10-76</span>En Route</div>
-                        <div class="code-item essential"><span class="code">Code 5</span>Felony Stop</div>
-                        <div class="code-item"><span class="code">10-37</span>Illegal Park</div>
-                        <div class="code-item essential"><span class="code">10-8</span>In Service</div>
-                        <div class="code-item essential"><span class="code">10-20</span>Location</div>
-                        <div class="code-item"><span class="code">10-35</span>Major Crime</div>
-                        <div class="code-item"><span class="code">10-25</span>Meet Up</div>
-                        <div class="code-item essential"><span class="code">10-23</span>On Scene</div>
-                        <div class="code-item essential"><span class="code">10-7</span>Out of Service</div>
-                    </div>
-            
-                    <!-- Bottom two columns of 10-Codes -->
-                    <div class="codes-list">
-                        <div class="code-item"><span class="code">10-16</span>Passive Resist</div>
-                        <div class="code-item"><span class="code">10-36</span>Ped Stop</div>
-                        <div class="code-item essential"><span class="code">10-80</span>Pursuit</div>
-                        <div class="code-item"><span class="code">10-2</span>Radio Check</div>
-                        <div class="code-item"><span class="code">10-9</span>Repeat</div>
-                        <div class="code-item"><span class="code">10-34</span>Riot</div>
-                        <div class="code-item essential"><span class="code">Code 4</span>Scene Clear</div>
-                        <div class="code-item"><span class="code">10-11</span>Traffic Stop</div>
-                        <div class="code-item"><span class="code">10-19</span>Transport</div>
-                        <div class="code-item"><span class="code">10-15</span>Uncooperative</div>
-                        <div class="code-item"><span class="code">10-30</span>Unnec. Radio Use</div>
-                        <div class="code-item"><span class="code">10-31</span>Unit (C1)</div>
-                        <div class="code-item"><span class="code">10-32</span>Units (C2)</div>
-                        <div class="code-item essential"><span class="code">Code 3</span>Urgent</div>
-                        <div class="code-item"><span class="code">10-28</span>Veh. Reg Info</div>
-                    </div>
+                <div class="codes-list">
+                    <!-- Column 1 -->
+                    <div class="code-item essential"><span class="code">10-4</span>Acknowledged/OK</div>
+                    <div class="code-item essential"><span class="code">10-69</span>Active Rizzing</div>
+                    <div class="code-item essential"><span class="code">10-80</span>Active Veh. Pursuit</div>
+                    <div class="code-item"><span class="code">10-31</span>Add. Unit (C1)</div>
+                    <div class="code-item essential"><span class="code">10-32</span>Add. Units (C2)</div>
+                    <div class="code-item essential"><span class="code">10-23</span>Arrived at scene</div>
+                    <div class="code-item"><span class="code">10-24</span>Assign. Completed</div>
+                    <div class="code-item"><span class="code">10-60</span>Assist Motorist</div>
+                    <div class="code-item essential"><span class="code">10-41</span>Beginning Duty</div>
+                    <div class="code-item"><span class="code">10-81</span>Breathalyzer/DUI</div>
+                    <div class="code-item essential"><span class="code">10-6</span>Busy</div>
+                    <div class="code-item essential"><span class="code">10-29</span>Check Wanted</div>
+                    <div class="code-item"><span class="code">10-79</span>Dead Body On Scene</div>
+                    <div class="code-item"><span class="code">10-26</span>Detaining Subject</div>
+                    <div class="code-item essential"><span class="code">10-78</span>Detective Needed</div>
+                    <div class="code-item"><span class="code">10-58</span>Direct Traffic</div>
+                    <div class="code-item essential"><span class="code">10-22</span>Disregard</div>
+                    <div class="code-item"><span class="code">10-68</span>Dispatch Info</div>
+                    <div class="code-item"><span class="code">10-27</span>DL Information</div>
+                    <div class="code-item"><span class="code">10-33</span>Emergency/Panic</div>
+                    <div class="code-item essential"><span class="code">10-42</span>Ending Duty</div>
+                    <div class="code-item essential"><span class="code">10-76</span>En route</div>
+                    <!-- Column 2 -->
+                    <div class="code-item"><span class="code">10-59</span>Escort (Emergency)</div>
+                    <div class="code-item"><span class="code">10-77</span>ETA</div>
+                    <div class="code-item"><span class="code">10-10</span>Fight in Progress</div>
+                    <div class="code-item"><span class="code">10-70</span>Foot Pursuit</div>
+                    <div class="code-item"><span class="code">10-57</span>Hit and Run</div>
+                    <div class="code-item"><span class="code">10-37</span>Illegally Parked</div>
+                    <div class="code-item essential"><span class="code">10-8</span>In Service</div>
+                    <div class="code-item"><span class="code">10-43</span>Information</div>
+                    <div class="code-item essential"><span class="code">10-73</span>Injured Person</div>
+                    <div class="code-item"><span class="code">10-56</span>Intox. Pedestrian</div>
+                    <div class="code-item essential"><span class="code">10-20</span>Location</div>
+                    <div class="code-item"><span class="code">10-35</span>Major Crime Alert</div>
+                    <div class="code-item"><span class="code">10-96</span>Mental Subject</div>
+                    <div class="code-item essential"><span class="code">10-7</span>Out of Service</div>
+                    <div class="code-item essential"><span class="code">10-16</span>Passively Resist</div>
+                    <div class="code-item"><span class="code">10-36</span>Pedestrian Stop</div>
+                    <div class="code-item essential"><span class="code">10-90</span>Pot. Robbery</div>
+                    <div class="code-item"><span class="code">10-98</span>Prison/Jail Break</div>
+                    <div class="code-item essential"><span class="code">10-2</span>Radio Check</div>
+                    <div class="code-item"><span class="code">10-91</span>Reckless Driver</div>
+                    <div class="code-item"><span class="code">10-5</span>Relay</div>
+                    <div class="code-item essential"><span class="code">10-9</span>Repeat</div>
+                    <!-- Column 3 -->
+                    <div class="code-item essential"><span class="code">10-25</span>Report in Person</div>
+                    <div class="code-item essential"><span class="code">10-19</span>Request Transport</div>
+                    <div class="code-item"><span class="code">10-12</span>Ride Along</div>
+                    <div class="code-item"><span class="code">10-34</span>Riot</div>
+                    <div class="code-item essential"><span class="code">10-52</span>Roll EMS/Fire</div>
+                    <div class="code-item"><span class="code">10-0</span>Signal Check</div>
+                    <div class="code-item essential"><span class="code">10-99</span>Stolen Vehicle</div>
+                    <div class="code-item"><span class="code">10-3</span>Stop Transmitting</div>
+                    <div class="code-item"><span class="code">10-13</span>Subj w/ Deadly Wpn</div>
+                    <div class="code-item essential"><span class="code">10-95</span>Subject in Custody</div>
+                    <div class="code-item essential"><span class="code">10-17</span>Susp. Drug/Firearm</div>
+                    <div class="code-item"><span class="code">10-38</span>Suspicious Veh.</div>
+                    <div class="code-item essential"><span class="code">10-50</span>Traffic Collision</div>
+                    <div class="code-item essential"><span class="code">10-11</span>Traffic Stop</div>
+                    <div class="code-item essential"><span class="code">10-15</span>Uncoop. Subject</div>
+                    <div class="code-item"><span class="code">10-30</span>Unnec. Radio Use</div>
+                    <div class="code-item"><span class="code">10-28</span>Veh. Reg. Info</div>
+                    <div class="code-item"><span class="code">10-55</span>Vehicle Theft (GTA)</div>
                 </div>
             </div>
         </details>
@@ -319,3 +340,4 @@
 
 </body>
 </html>
+
