--- a/security.html
+++ b/security.html
@@ -135,7 +135,7 @@
                     <h2 class="text-3xl font-bold text-teal-300 mb-6">For Security Researchers: Vulnerability Disclosure Policy</h2>
                     
                     <h3 class="text-xl font-semibold text-white mt-4">Reporting a Vulnerability</h3>
-                    <p class="text-gray-300 mt-2">We value the contributions of the security research community. Please send your detailed findings to: <a href="mailto:security@dubc.io" class="text-purple-400 hover:underline">security@dubc.io</a>. For sensitive information, please use our PGP key: <a href="https://pgp.dubc.io/publickey.security%40dubc.io-7922828038ea418b3b3b69c82d22d9fdeda19ac7.asc" target="_blank" rel="noopener" class="text-purple-400 hover:underline">PGP Public Key</a>.</p>
+                    <p class="text-gray-300 mt-2">We value the contributions of the security research community. Please send your detailed findings to: <a href="mailto:security@dubc.io" class="text-purple-400 hover:underline">security@dubc.io</a>. For sensitive information, please use our PGP key: <a href="https://pgp.dubc.io/pgp-public-key.asc" target="_blank" rel="noopener" class="text-purple-400 hover:underline">PGP Public Key</a>.</p>
 
                     <h3 class="text-xl font-semibold text-white mt-6">Scope</h3>
                     <ul class="list-disc list-inside space-y-2 text-gray-300 mt-4">
