--- a/index.html
+++ b/index.html
@@ -132,21 +132,17 @@
                  </a>
 
                  <!-- 『DJ』Music --><a href="dj.html" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.2s;">
-                    <svg class="w-6 h-6 mr-4 text-pink-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M9 9l10.5-3m0 6.553v3.75a2.25 2.25 0 01-1.007 1.916l-7.5 4.125a2.25 2.25 0 01-2.015 0L3.25 16.203a2.25 2.25 0 01-1.007-1.916V9.043c0-.816.51-1.558 1.285-1.916l7.5-4.125a2.25 2.25 0 012.015 0L19.5 7.127" />
-                    </svg>
+                    <img src="dj-icon-360x360.png" alt="DJ Icon" class="w-6 h-6 mr-4" width="360" height="360">
                     <span class="font-semibold text-lg flex-grow text-left">『DJ』Music</span>
                  </a>
 
                  <!-- Gaming --><a href="gaming.html" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.3s;">
-                    <svg class="w-6 h-6 mr-4 text-teal-400" fill="currentColor" viewBox="0 0 512 512" xmlns="http://www.w3.org/2000/svg"><title>Gaming</title><path d="M481.5 127.1c-32.3-32.3-75.8-50.2-121.5-50.2H152C77.1 76.9 0 154 0 228.9v54.3c0 74.9 77.1 152 152 152h208c45.7 0 89.2-17.9 121.5-50.2c32.3-32.3 50.2-75.8 50.2-121.5v-54.3c0-45.7-17.9-89.2-50.2-121.5zM152 384c-47.3 0-80-48.2-80-100.9v-54.3c0-52.7 32.7-100.9 80-100.9h208c26.1 0 51.2 10.2 69.7 28.7c18.5 18.5 28.7 43.6 28.7 69.7v54.3c0 26.1-10.2 51.2-28.7 69.7c-18.5 18.5-43.6 28.7-69.7 28.7H152zM320 256c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32zm96 0c-17.7 0-32-14.3-32-32s14.3-32 32-32s32 14.3 32 32s-14.3 32-32 32zM144 208v32h32v-32h-32zm32 32h32v32h-32v-32zm-32 32v32h32v-32h-32zM128 272h32v32h-32v-32z"/></svg>
+                    <img src="gaming-icon-360x360.png" alt="Gaming Icon" class="w-6 h-6 mr-4" width="360" height="360">
                     <span class="font-semibold text-lg flex-grow text-left">Gaming</span>
                  </a>
 
                  <!-- Other --><a href="other.html" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.4s;">
-                    <svg class="w-6 h-6 mr-4 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
-                        <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 9.776c.112-.017.227-.026.344-.026h15.812c.117 0 .232.009.344.026m-16.5 0a2.25 2.25 0 00-1.883 2.542l.857 6a2.25 2.25 0 002.227 1.932H19.05l.857-6a2.25 2.25 0 00-2.227-1.932m-16.5 0-2.223-1.574a2.25 2.25 0 01-1.267-2.062V4.5a2.25 2.25 0 012.25-2.25h15a2.25 2.25 0 012.25 2.25v1.636a2.25 2.25 0 01-1.267 2.062L19.5 9.776" />
-                    </svg>
+                    <img src="other-icon-360x360.png" alt="Other Icon" class="w-6 h-6 mr-4" width="360" height="360">
                     <span class="font-semibold text-lg flex-grow text-left">Other</span>
                  </a>
             </main>
