--- a/index.html
+++ b/index.html
@@ -131,9 +131,9 @@
                      <span class="font-semibold text-lg flex-grow text-left">Discord</span>
                  </a>
 
-                 <!-- 『DJ』Music --><a href="dj.html" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.2s;">
+                 <!-- 『DJ』Music --><a href="music.html" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.2s;">
                     <img src="dj-icon-360x360.png" alt="DJ Icon" class="w-6 h-6 mr-4" width="360" height="360">
-                    <span class="font-semibold text-lg flex-grow text-left">『DJ』Music</span>
+                    <span class="font-semibold text-lg flex-grow text-left">Music</span>
                  </a>
 
                  <!-- Gaming --><a href="gaming.html" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.3s;">
