--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 
                  <!-- Discord -->
                  <a href="https://discord.gg/hHzJp9zH9W" target="_blank" rel="noopener noreferrer" class="social-link group flex items-center p-4 glassmorphic rounded-xl w-full animate-fade-slide-up" style="animation-delay: 0.1s;">
-                     <img src="discord icon 360x360.png" alt="Discord Icon" class="w-6 h-6 mr-4" width="360" height="360">
+                     <img src="discord-icon-360x360.png" alt="Discord Icon" class="w-6 h-6 mr-4" width="360" height="360">
                      <span class="font-semibold text-lg flex-grow text-left">Discord</span>
                  </a>
 
